[package]
name = "rust-chat"
version = "0.1.0"
edition = "2021"
authors = ["github.com/21pages"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
http = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
chrono = "0.4"
tower-http = { version = "0.2", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "mysql",  "chrono", "macros", "offline" ] }
dotenv = "0.15"