[package]
name = "rust-chat"
version = "0.1.0"
edition = "2021"
authors = [ "孙波 <pages21@163.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4", features=[ "ws", "headers", "multipart" ] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
http = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
chrono = "0.4"
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.2", features = ["full"] }
futures = "0.3"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "mysql",  "chrono", "macros", "offline" ] }
dotenv = "0.15"
anyhow = "1"
bytes = "1"
prost = "0.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
base64 = "0.13"
hex = "0.4"

[build-dependencies]
prost-build = "0.9"